--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-HELLO
+I designed this model to predict house prices in Chicago based on various property features,
+Such as the number of bedrooms and bathrooms, size, tax , and condition of the house.
+To achieve this, i used two types of regression models: Linear Regression and XGBoost (Extreme Gradient Boosting)
+Linear regression as a baseline for comparison, \nAnd XGBoost as the primary model to maximize predictive accuracy.
+In addition to linear regression, I implemented a Random Forest Regression model to improve predictive accuracy.
